--- a/py/CMakeLists.txt
+++ b/py/CMakeLists.txt
@@ -40,6 +40,11 @@ SET_TARGET_PROPERTIES(_log PROPERTIES PREFIX "")
 TARGET_LINK_LIBRARIES(_log yade)
 INSTALL(TARGETS _log DESTINATION "${YADE_PY_PATH}/yade/")
 
+ADD_LIBRARY(_testCppPy SHARED "${CMAKE_CURRENT_SOURCE_DIR}/_testCppPy.cpp")
+SET_TARGET_PROPERTIES(_testCppPy PROPERTIES PREFIX "")
+TARGET_LINK_LIBRARIES(_testCppPy yade)
+INSTALL(TARGETS _testCppPy DESTINATION "${YADE_PY_PATH}/yade/")
+
 ADD_LIBRARY(WeightedAverage2d SHARED "${CMAKE_CURRENT_SOURCE_DIR}/WeightedAverage2d.cpp")
 SET_TARGET_PROPERTIES(WeightedAverage2d PROPERTIES PREFIX "")
 INSTALL(TARGETS WeightedAverage2d DESTINATION "${YADE_PY_PATH}/yade/")
