mpmath is required for precisions higher than double.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,8 +354,9 @@ MESSAGE(STATUS   "${Esc}[36mChosen compiler flags are: CMAKE_CXX_FLAGS = ${CMAKE
 #  * set REAL_PRECISION_BITS as one of: 32,64,80,128 or higher
 #  * set REAL_DECIMAL_PLACES as one of:  6,15,18, 33 or higher
 #  * set REAL_USE_ARBITRARY  as one of: --- "OFF" -- or "MPFR" or "BOOST_BIN_FLOAT"
-#  * set REAL_PREC_NAME      as one of: "Float{bit}" or "Mpfr{decimal}" or "BoostBinFloat{decimal}"
-#  * set CONFIGURED_FEATS    ${REAL_PREC_NAME} mpmath${REAL_DECIMAL_PLACES}
+#  * set REAL_USE_MPMATH     as one of: -OFF-,------ON--------
+#  * set REAL_PREC_NAME      as one of: "PrecisionFloat" "PrecisionDouble", "PrecisionLongDouble", "PrecisionFloat128", "PrecisionMpfr" or "PrecisionBoostBinFloat"
+#  * set CONFIGURED_FEATS    ${REAL_PREC_NAME} ${REAL_USE_MPMATH}
 #  * #define YADE_REAL_BIT  REAL_PRECISION_BITS
 #  * #define YADE_REAL_DEC  REAL_DECIMAL_PLACES
 #  * #define YADE_REAL_MPFR    // defined when Real is expressed using mpfr (requires mpfr)
@@ -380,7 +381,7 @@ ENDIF()
 IF( (NOT REAL_DECIMAL_PLACES) AND (NOT REAL_PRECISION_BITS))
   SET(REAL_PRECISION_BITS "64")
   SET(REAL_DECIMAL_PLACES "15")
-  MESSAGE(STATUS "Note: Using default double precision as Real type for all calculations.")
+  SET(REAL_PREC_NAME "PrecisionDouble")
 ENDIF()
 
 function(floatexprToInt expr output)
@@ -393,24 +394,33 @@ IF( (    REAL_DECIMAL_PLACES) AND (NOT REAL_PRECISION_BITS))
   IF(${REAL_DECIMAL_PLACES} LESS 7)
     SET(REAL_PRECISION_BITS "32")
     SET(REAL_DECIMAL_PLACES "6")
+    SET(REAL_PREC_NAME "PrecisionFloat")
   ELSEIF(${REAL_DECIMAL_PLACES} LESS 16)
     SET(REAL_PRECISION_BITS "64")
     SET(REAL_DECIMAL_PLACES "15")
+    SET(REAL_PREC_NAME "PrecisionDouble")
   ELSEIF(${REAL_DECIMAL_PLACES} LESS 19)
     SET(REAL_PRECISION_BITS "80")
     SET(REAL_DECIMAL_PLACES "18")
+    SET(REAL_PREC_NAME "PrecisionLongDouble")
+    SET(REAL_USE_MPMATH "ON")
   ELSEIF(${REAL_DECIMAL_PLACES} LESS 34)
     SET(REAL_PRECISION_BITS "128")
     SET(REAL_DECIMAL_PLACES "33")
+    SET(REAL_PREC_NAME "PrecisionFloat128")
+    SET(REAL_USE_MPMATH "ON")
   ELSEIF(${REAL_DECIMAL_PLACES} LESS 39)
     MESSAGE(STATUS "${Esc}[36mNote: decimal places between 34 and 39 make it unclear if you want mpfr or float128, defaulting to float128. It is because some bits are used by the exponent.${Esc}[0m")
     SET(REAL_PRECISION_BITS "128")
     SET(REAL_DECIMAL_PLACES "33")
+    SET(REAL_PREC_NAME "PrecisionFloat128")
+    SET(REAL_USE_MPMATH "ON")
   ELSE()
     # calculate Nbits as Ndecimal/((log(2)/log(10)))
     floatexprToInt("(${REAL_DECIMAL_PLACES}/0.30102999566398119521)" REAL_PRECISION_BITS)
     #MATH(EXPR REAL_PRECISION_BITS "(${REAL_DECIMAL_PLACES}/0.30102999566398119521)") # ← doesn't work with floats
     SET(REAL_USE_ARBITRARY "ON") # we know it has to be arbitrary, but we don't know yet if mpfr is available
+    SET(REAL_USE_MPMATH "ON")
   ENDIF()
 ENDIF()
 
@@ -418,19 +428,26 @@ IF( (NOT REAL_DECIMAL_PLACES) AND (    REAL_PRECISION_BITS))
   IF(${REAL_PRECISION_BITS} LESS 33)
     SET(REAL_PRECISION_BITS "32")
     SET(REAL_DECIMAL_PLACES "6")
+    SET(REAL_PREC_NAME "PrecisionFloat")
   ELSEIF(${REAL_PRECISION_BITS} LESS 65)
     SET(REAL_PRECISION_BITS "64")
     SET(REAL_DECIMAL_PLACES "15")
+    SET(REAL_PREC_NAME "PrecisionDouble")
   ELSEIF(${REAL_PRECISION_BITS} LESS 81)
     SET(REAL_PRECISION_BITS "80")
     SET(REAL_DECIMAL_PLACES "18")
+    SET(REAL_PREC_NAME "PrecisionLongDouble")
+    SET(REAL_USE_MPMATH "ON")
   ELSEIF(${REAL_PRECISION_BITS} LESS 129)
     SET(REAL_PRECISION_BITS "128")
     SET(REAL_DECIMAL_PLACES "33")
+    SET(REAL_PREC_NAME "PrecisionFloat128")
+    SET(REAL_USE_MPMATH "ON")
   ELSE()
     # calculate Ndecimal as Nbits*((log(2)/log(10)))
     floatexprToInt("(${REAL_PRECISION_BITS}*0.30102999566398119521)" REAL_DECIMAL_PLACES)
     SET(REAL_USE_ARBITRARY "ON") # we know it has to be arbitrary, but we don't know yet if mpfr is available
+    SET(REAL_USE_MPMATH "ON")
   ENDIF()
 ENDIF()
 
@@ -439,26 +456,30 @@ MESSAGE(STATUS "${Esc}[36mReal type will have ${REAL_DECIMAL_PLACES} decimal pla
 
 IF(REAL_USE_ARBITRARY)
   IF(NOT ENABLE_MPFR)
-    SET(REAL_PREC_NAME "BoostBinFloat${REAL_DECIMAL_PLACES}")
+    SET(REAL_PREC_NAME "PrecisionBoostBinFloat${REAL_DECIMAL_PLACES}")
     SET(REAL_USE_ARBITRARY "BOOST_BIN_FLOAT")
     ADD_DEFINITIONS("-DYADE_REAL_BBFLOAT")
     MESSAGE(STATUS "To use faster higher precision use -DENABLE_MPFR=ON cmake option. Currently a simple type boost::multiprecision::cpp_bin_float will be used.")
   ELSE()
-    SET(REAL_PREC_NAME "Mpfr${REAL_DECIMAL_PLACES}")
+    SET(REAL_PREC_NAME "PrecisionMpfr${REAL_DECIMAL_PLACES}")
     SET(REAL_USE_ARBITRARY "MPFR")
     ADD_DEFINITIONS("-DYADE_REAL_MPFR")
     MESSAGE(STATUS "Real type will use mpfr precision.")
   ENDIF()
+ENDIF()
+
+IF(REAL_USE_MPMATH)
   FIND_PACKAGE(Mpmath REQUIRED)
   IF(MPMATH_FOUND)
     MESSAGE(STATUS "python-mpmath found, version: ${MPMATH_VERSION}")
-    SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} mpmath${REAL_DECIMAL_PLACES}")
+    SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} mpmath")
+    SET(MPMATH_IS_USED "True")
   ELSE()
-    MESSAGE(FATAL_ERROR "Cannot find python-mpmath or python3-mpmath package http://mpmath.org to use MPFR in python, but it is necessary for selected Real precision.")
+    MESSAGE(FATAL_ERROR "Cannot find python-mpmath or python3-mpmath package http://mpmath.org to use high precision in python, but it is necessary for selected Real precision.")
   ENDIF()
 ELSE()
-  SET(REAL_PREC_NAME "Float${REAL_PRECISION_BITS}")
   SET(DISABLED_FEATS "${DISABLED_FEATS} mpmath")
+  SET(MPMATH_IS_USED "False")
 ENDIF()
 
 ADD_DEFINITIONS("-DYADE_REAL_BIT=${REAL_PRECISION_BITS}")
@@ -481,7 +502,7 @@ ELSE()
 ENDIF()
 
 IF(REAL_USE_ARBITRARY EQUAL "ON")
-  MESSAGE(FATAL_ERROR " there's an error in CMakeLists.txt, REAL_USE_ARBITRARY == ${REAL_USE_ARBITRARY}, but should be ON,MPFR,BOOST_BIN_FLOAT")
+  MESSAGE(FATAL_ERROR " there's an error in CMakeLists.txt, REAL_USE_ARBITRARY == ${REAL_USE_ARBITRARY}, but should be OFF,MPFR,BOOST_BIN_FLOAT")
 ENDIF()
 
 #======================================
