--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -458,12 +458,12 @@ IF(REAL_USE_ARBITRARY)
   IF(NOT ENABLE_MPFR)
     SET(REAL_PREC_NAME "PrecisionBoostBinFloat${REAL_DECIMAL_PLACES}")
     SET(REAL_USE_ARBITRARY "BOOST_BIN_FLOAT")
-    ADD_DEFINITIONS("-DYADE_REAL_BBFLOAT")
-    MESSAGE(STATUS "To use faster higher precision use -DENABLE_MPFR=ON cmake option. Currently a simple type boost::multiprecision::cpp_bin_float will be used.")
+    ADD_DEFINITIONS("-D YADE_REAL_BBFLOAT")
+    MESSAGE(STATUS "To use faster higher precision use -D ENABLE_MPFR=ON cmake option. Currently a simple type boost::multiprecision::cpp_bin_float will be used.")
   ELSE()
     SET(REAL_PREC_NAME "PrecisionMpfr${REAL_DECIMAL_PLACES}")
     SET(REAL_USE_ARBITRARY "MPFR")
-    ADD_DEFINITIONS("-DYADE_REAL_MPFR")
+    ADD_DEFINITIONS("-D YADE_REAL_MPFR")
     MESSAGE(STATUS "Real type will use mpfr precision.")
   ENDIF()
 ENDIF()
@@ -482,19 +482,40 @@ ELSE()
   SET(MPMATH_IS_USED "False")
 ENDIF()
 
-ADD_DEFINITIONS("-DYADE_REAL_BIT=${REAL_PRECISION_BITS}")
-ADD_DEFINITIONS("-DYADE_REAL_DEC=${REAL_DECIMAL_PLACES}")
+IF(NOT ((${REAL_PRECISION_BITS} EQUAL 64)))
+# This means that new high-precision capabilities will be used. To make this work we need a patched version of /usr/include/miniegen
+  ADD_DEFINITIONS("-D MINIEIGEN_OVERRIDE")
+  FIND_PACKAGE(MiniEigenOverride REQUIRED)
+  IF(NOT MINIEIGENOVERRIDE_FOUND)
+    MESSAGE(FATAL_ERROR "Cannot find python3-minieigen version in /usr/include/miniegen which supports #ifndef MINIEIGEN_OVERRIDE")
+  ENDIF()
+
+  MESSAGE(STATUS "Checking compiler version for ${REAL_PREC_NAME}")
+  IF(REAL_USE_ARBITRARY AND ENABLE_MPFR)
+    IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.3.0 )
+      MESSAGE(FATAL_ERROR "MPFR works since g++ version around 8.3.0. For possible supported platforms see https://gitlab.com/cosurgi/minieigen-real/pipelines/104924921")
+    ENDIF()
+  ELSE()
+    IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.2.1 )
+      MESSAGE(FATAL_ERROR "High precision '${REAL_PREC_NAME}' works since g++ version around 9.2.1. For possible supported platforms see https://gitlab.com/cosurgi/minieigen-real/pipelines/104924921")
+    ENDIF()
+  ENDIF()
+ENDIF()
+
+ADD_DEFINITIONS("-D YADE_REAL_BIT=${REAL_PRECISION_BITS}")
+ADD_DEFINITIONS("-D YADE_REAL_DEC=${REAL_DECIMAL_PLACES}")
 
 SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} ${REAL_PREC_NAME}")
 
 IF(ENABLE_MPFR)
   FIND_PACKAGE(MPFR REQUIRED)
-  IF(MPFR_FOUND)
+  FIND_PACKAGE(MPFRCPP REQUIRED)
+  IF(MPFR_FOUND AND MPFRCPP_FOUND)
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} MPFR")
     MESSAGE(STATUS "MPFR enabled, version: ${MPFR_VERSION}, linking with ${MPFR_LIBRARIES}")
-    ADD_DEFINITIONS("-DYADE_MPFR")
+    ADD_DEFINITIONS("-D YADE_MPFR")
   ELSE()
-    MESSAGE(FATAL_ERROR "Cannot find MPFR library https://www.mpfr.org, debian package libmpfr-dev")
+    MESSAGE(FATAL_ERROR "Cannot find MPFR library https://www.mpfr.org, two debian packages libmpfr-dev libmpfrc++-dev")
   ENDIF()
 ELSE()
   SET(DISABLED_FEATS "${DISABLED_FEATS} MPFR")
