CMakeLists.txt - disable Cholmod (LINSOLV) in case when non-double precision is used. Because cholmod only works with double.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -743,7 +743,7 @@ IF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
   FIND_PACKAGE(OpenBlas)
   FIND_PACKAGE(Metis)
 
-  IF(CHOLMOD_FOUND AND OPENBLAS_FOUND AND METIS_FOUND AND CGAL_FOUND)
+  IF(CHOLMOD_FOUND AND OPENBLAS_FOUND AND METIS_FOUND AND CGAL_FOUND AND (${REAL_PRECISION_BITS} EQUAL 64))
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CGAL_DEFINITIONS} -DLINSOLV")
 
     SET(LINKLIBS  "${LINKLIBS};${CHOLMOD_LIBRARIES};${AMD_LIBRARY};${CAMD_LIBRARY};${COLAMD_LIBRARY};${CCOLAMD_LIBRARY};${OPENBLAS_LIBRARY};${METIS_LIBRARY};${SUITESPARSE_LIBRARY};${SUITESPARSECONFIG_LIBRARY}")
@@ -773,6 +773,9 @@ IF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
 
   ELSE(CHOLMOD_FOUND AND OPENBLAS_FOUND AND METIS_FOUND AND CGAL_FOUND)
     MESSAGE(STATUS "Missing dependency for LINSOLV, disabled")
+    IF(NOT ((${REAL_PRECISION_BITS} EQUAL 64)))
+      MESSAGE(STATUS "A linear solver that would work with non-double precision type is necessary. Cholmod uses double only. See more details in lib/triangulation/FlowBoundingSphereLinSolv.hpp")
+    ENDIF()
     SET(DISABLED_FEATS "${DISABLED_FEATS} LINSOLV")
     SET(ENABLE_LINSOLV OFF)
   ENDIF(CHOLMOD_FOUND AND OPENBLAS_FOUND AND METIS_FOUND AND CGAL_FOUND)
