CMakeLists.txt : disable TWOPHASEFLOW for non-double precision. Enabling it requires switching from cholmod to native Eigen solvers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -531,6 +531,12 @@ MESSAGE(STATUS "Will use ${Esc}[93m${REAL_PREC_NAME}${Esc}[0m as Real type with 
 #======================================
 #====== ** END Real precision ** ======
 #======================================
+# non-double Real precision does not work with extarnal library cholmod. One check is here. Another around line 746:  IF(CHOLMOD_FOUND  ………
+IF(ENABLE_TWOPHASEFLOW AND (NOT (${REAL_PRECISION_BITS} EQUAL 64)))
+   MESSAGE(STATUS "TWOPHASEFLOW was disabled automatically because it uses double-only external library: cholesky. It can be replaced with native Eigen solvers, then it will work.")
+   SET(ENABLE_TWOPHASEFLOW OFF)
+ENDIF()
+
 
 #===========================================================
 
