--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -784,7 +784,7 @@ IF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
     ENDIF()
     SET(DISABLED_FEATS "${DISABLED_FEATS} LINSOLV")
     SET(ENABLE_LINSOLV OFF)
-  ENDIF(CHOLMOD_FOUND AND OPENBLAS_FOUND AND METIS_FOUND AND CGAL_FOUND)
+  ENDIF(CHOLMOD_FOUND AND OPENBLAS_FOUND AND METIS_FOUND AND CGAL_FOUND AND (${REAL_PRECISION_BITS} EQUAL 64))
 ELSE(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
   SET(DISABLED_FEATS "${DISABLED_FEATS} LINSOLV")
       IF(ENABLE_TWOPHASEFLOW)
