Revert "Set debhelper to min version 11"
This reverts commit b46da180a3d1ee67b433b0c8822f47cf3975fa43

--- a/scripts/ppa_ci/debian/control
+++ b/scripts/ppa_ci/debian/control
@@ -10,6 +10,7 @@ X-Python-Version: current
 Build-Depends:
  cmake,
  debhelper (>= 9),
+ dh-python,
  freeglut3-dev,
  help2man,
  libboost-all-dev,
