Link conditionally with CGAL libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -481,7 +481,14 @@ IF(ENABLE_CGAL)
 
     FILE(GLOB CGAL_SRC_LIB "lib/triangulation/*.cpp")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CGAL_DEFINITIONS} -DYADE_CGAL")
-    SET(LINKLIBS  "${LINKLIBS};${CGAL_LIBRARIES};${GMP_LIBRARIES};${GMPXX_LIBRARIES};")
+    IF(NOT (${CGAL_LIBRARIES} STREQUAL "CGAL_LIBRARIES-NOTFOUND"))
+      MESSAGE(STATUS "Using CGAL_LIBRARIES == ${CGAL_LIBRARIES}")
+      SET(LINKLIBS  "${LINKLIBS};${CGAL_LIBRARIES};${GMP_LIBRARIES};${GMPXX_LIBRARIES};")
+    ELSE()
+      SET(${CGAL_LIBRARIES} "UNUSED_ALREDY_NOT_LINKED")
+      MESSAGE(STATUS "Skipping CGAL_LIBRARIES == ${CGAL_LIBRARIES}")
+      SET(LINKLIBS  "${LINKLIBS};${GMP_LIBRARIES};${GMPXX_LIBRARIES};")
+    ENDIF()
     MESSAGE(STATUS "Found CGAL")
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} CGAL")
 
