Don't use OpenMPAccumulator for Real types other than double. That memcpy inside it requires some special care.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -600,15 +600,18 @@ ENDIF(ENABLE_VTK)
 #===========================================================
 IF(ENABLE_OPENMP)
   FIND_PACKAGE(OpenMP)
-  IF(OPENMP_FOUND)
+  IF(OPENMP_FOUND AND ((${REAL_PRECISION_BITS} EQUAL 64)))
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DYADE_OPENMP ${OpenMP_CXX_FLAGS}")
     MESSAGE(STATUS "Found OpenMP")
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} OpenMP")
-  ELSE(OPENMP_FOUND)
+  ELSE(OPENMP_FOUND AND ((${REAL_PRECISION_BITS} EQUAL 64)))
+    IF(NOT ((${REAL_PRECISION_BITS} EQUAL 64)))
+      MESSAGE(STATUS "OpenMPAccumulator is does not work correctly with precision different than 'double'. Revert this commit when this is fixed.")
+    ENDIF()
     MESSAGE(STATUS "OpenMP NOT found")
     SET(ENABLE_OPENMP OFF)
     SET(DISABLED_FEATS "${DISABLED_FEATS} OPENMP")
-  ENDIF(OPENMP_FOUND)
+  ENDIF(OPENMP_FOUND AND ((${REAL_PRECISION_BITS} EQUAL 64)))
 ELSE(ENABLE_OPENMP)
   SET(DISABLED_FEATS "${DISABLED_FEATS} OPENMP")
 ENDIF(ENABLE_OPENMP)
